--- a/entitat-service/application.properties
+++ b/entitat-service/application.properties
@@ -8,3 +8,14 @@ spring.datasource.password={cipher}3f9db6d9dd197e740d72eb6f1586a717e239dd84eada8
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+keycloak.realm=goib
+keycloak.auth-server-url=http://127.0.0.1:18080/auth
+keycloak.ssl-required=external
+keycloak.resource=notib
+keycloak.credentials.secret=dca1c31b-9697-4e73-a63d-57c1880c4000
+keycloak.use-resource-role-mappings=false
+keycloak.bearer-only=true
